# QNearbyShare

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dbus-types/: CMakeLists.txt  dbusconstants.h  dbuserrors.h  nearbysharetarget.cpp  nearbysharetarget.h  qnearbysharedbus.cpp  qnearbysharedbus.h  sendingfile.cpp  sendingfile.h  transferprogress.cpp  transferprogress.h
libqnearbyshare/: CMakeLists.txt
libqnearbyshare-server/: CMakeLists.txt
libqnearbyshare-server/nearbyshare/: abstractnearbypayload.cpp  cryptography.cpp  cryptography.h  endpointinfo.cpp  endpointinfo.h  nearbypayload.cpp  nearbyshareclient.cpp  nearbyshareclient.h  nearbyshareconstants.h  nearbysharediscovery.cpp  nearbysharediscovery.h  nearbyshareserver.cpp  nearbyshareserver.h  nearbysocket.cpp  nearbysocket.h
libqnearbyshare-server/nearbyshare/cryptography/: cryptoppcryptograhy.cpp  opensslcryptography.cpp
libqnearbyshare-server/proto/: CMakeLists.txt
libqnearbyshare/nearbyshare/: abstractnearbypayload.cpp  abstractnearbypayload.h  cryptography.cpp  cryptography.h  endpointinfo.cpp  endpointinfo.h  nearbypayload.cpp  nearbypayload.h  nearbyshareclient.cpp  nearbyshareclient.h  nearbyshareserver.cpp  nearbyshareserver.h  nearbysocket.cpp  nearbysocket.h
libqnearbyshare/nearbyshare/cryptography/: cryptoppcryptograhy.cpp  opensslcryptography.cpp
qnearbyshare-receive/: CMakeLists.txt  main.cpp  receiver.cpp  receiver.h
qnearbyshare-send/: CMakeLists.txt  console.cpp  console.h  devicediscovery.cpp  devicediscovery.h  main.cpp  sendjob.cpp  sendjob.h
qnearbyshared/: CMakeLists.txt  com.vicr123.qnearbyshare.daemon.service  com.vicr123.qnearbyshare.service  com.vicr123.qnearbyshare.service.in  main.cpp
qnearbyshared/dbus/: constants.h  dbushelpers.cpp  dbushelpers.h  dbusnearbysharediscovery.cpp  dbusnearbysharediscovery.h  dbusnearbysharelistener.cpp  dbusnearbysharelistener.h  dbusnearbysharemanager.cpp  dbusnearbysharemanager.h  dbusnearbysharesession.cpp  dbusnearbysharesession.h
qnearbyshared/nearbyshare/: cryptography.cpp  cryptography.h  nearbyshareclient.h  nearbyshareserver.cpp  nearbysocket.cpp  nearbysocket.h
qnearbyshared/proto/: CMakeLists.txt
test/: CMakeLists.txt  cryptography-test.cpp
